--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -264,10 +264,10 @@
     <string name="fontsize">حجم الخط</string>
     <string name="on">تشغيل</string>
     <string name="off">إيقاف</string>
-    <string name="finddus">اعثر عليناا</string>
+    <string name="finddus">إعثر علينا</string>
     <string name="alriga" />
     <string name="callus">إتصل بنا</string>
-    <string name="visitus">قم بزيارتن</string>
+    <string name="visitus">قم بزيارتنا</string>
     <string name="mailus">راسلنا</string>
     <string name="reachus">تواصل معنا</string>
     <string name="sendus">أرسل لنا</string>
@@ -288,4 +288,5 @@
     <string name="pantoplot">تكبير للقطعة</string>
     <string name="openmaknai">افتح في تطبيق مكاني</string>
     <string name="userguide">دليل المستخدم</string>
+    <string name="guest">زائر</string>
 </resources>
