1. Firebase analytics integration 17/07/020 11:00pm

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -265,7 +265,7 @@
     <string name="on">تشغيل</string>
     <string name="off">إيقاف</string>
     <string name="finddus">إعثر علينا</string>
-    <string name="alriga" />
+    <string name="alriga">al rigga 17th st</string>
     <string name="callus">إتصل بنا</string>
     <string name="visitus">قم بزيارتنا</string>
     <string name="mailus">راسلنا</string>
