1. Bug fixes as on 22/07/2020 9:30pm

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -270,7 +270,7 @@
     <string name="reachus">reach us</string>
     <string name="sendus">send us</string>
     <string name="more">Options</string>
-    <string name="lastlogin">Last Login on</string>
+    <string name="lastlogin"><b>Last Login</b> on</string>
     <!--<string name="lastlogin">Last Login on</string>-->
     <string name="login_with">Login With</string>
     <string name="with_uaepass"> UAE PASS</string>
