--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -289,6 +289,7 @@
     <string name="kharetati_feedback">Kharetati feedback</string>
     <string name="community">Community: </string>
     <string name="no_result_found">No results found</string>
+    <string name="successful_logout">You have successfully logged out</string>
 
     <string-array name="arrHeader">
         <item>header 1</item>
