1.Bug fixes as on 21/08/2020 1:30am

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -266,6 +266,7 @@
     <string name="alriga" >al rigga 17th st</string>
     <string name="callus">call us</string>
     <string name="visitus">visit us</string>
+    <string name="visitus_hd">Visit Us</string>
     <string name="mailus">email us</string>
     <string name="reachus">reach us</string>
     <string name="sendus">send us</string>
