--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -268,6 +268,7 @@
     <string name="alriga">al rigga 17th st</string>
     <string name="callus">إتصل بنا</string>
     <string name="visitus">قم بزيارتنا</string>
+    <string name="visitus_hd">قم بزيارتنا</string>
     <string name="mailus">راسلنا</string>
     <string name="reachus">تواصل معنا</string>
     <string name="sendus">أرسل لنا</string>
