1.Bug Fixes as on 10/09/2020 08:00pm

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -289,7 +289,7 @@
     <string name="pantoplot">تكبير للقطعة</string>
     <string name="openmaknai">افتح في تطبيق مكاني</string>
     <string name="userguide">دليل المستخدم</string>
-    <string name="guest">زائر</string>
+    <string name="guest">ضيف</string>
     <string name="kharetati_feedback">اقتراحات خريطتي</string>
     <string name="community">المنطقة: </string>
     <string name="no_result_found">لم يتم العثور على نتائج</string>
