1.Bug Fixes as on 15/09/2020 05:30pm

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -295,4 +295,5 @@
     <string name="no_result_found">لم يتم العثور على نتائج</string>
     <string name="successful_logout">لقد قمت بتسجيل الخروج بنجاح</string>
     <string name="fonttext">أ</string>
+    <string name="valid_criteria">الرجاء إدخال قيمة صحيحة للبحث</string>
 </resources>
