--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -292,6 +292,7 @@
     <string name="no_result_found">No results found</string>
     <string name="successful_logout">You have successfully logged out</string>
     <string name="fonttext">aA</string>
+    <string name="valid_criteria">Please enter valid search criteria</string>
 
     <string-array name="arrHeader">
         <item>header 1</item>
