1.Bug Fixes as on 22/09/2020 03:30pm

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -273,7 +273,7 @@
     <string name="reachus">تواصل معنا</string>
     <string name="sendus">أرسل لنا</string>
     <string name="menu_happiness">مؤشر السعادة</string>
-    <string name="more">خيارات</string>
+    <string name="more">الخيارات</string>
     <string name="lastlogin">اخر تسجيل دخول</string>
     <string name="login_with">الدخول</string>
     <string name="with_uaepass">بالهوية الرقمية</string>
